# ci-agent

./: .containerignore  .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  new 61.txt  pyproject.toml  tmp_build_call.py
.github/workflows/: ci.yml
src/ci_agent/: agent.py  call_builder.py  cli.py  google_adapter.py  streamlit_app.py
