[project]
name = "ci-agent"
version = "0.1.0"
description = "Competitive Intelligence Agent using OpenRouter and Meta Language"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
  "openai-agents>=0.1.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.36",
]
dev = [
  "ruff>=0.5.0",
  "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
fix = true
exclude = ["uv.lock", ".venv", "dist", "build"]

[tool.pytest.ini_options]
testpaths = ["tests"]
